--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.5",
+    "polkadot-api": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "sonner": "^1.7.4",
     "tailwindcss": "^4.0.5"
   },
   "devDependencies": {
