--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@polkadot-api/descriptors": "file:.papi\\descriptors",
+    "@reactive-dot/core": "^0.29.0",
+    "@reactive-dot/react": "^0.29.0",
+    "@reactive-dot/wallet-ledger": "^0.16.21",
     "@tailwindcss/vite": "^4.0.5",
+    "dot-connect": "^0.14.0",
     "polkadot-api": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.5",
     "sonner": "^1.7.4",
     "tailwindcss": "^4.0.5"
   },
